# BigDataAirlines

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
data/AIR_CIA/: ANAC_20211220_203627.csv  ANAC_20211220_203643.csv  ANAC_20211220_203733.csv
docs/: index.md  staging.md
output/AERODROMOS/: aerodromos_202310.snappy.parquet
output/AIR_CIA/: air_cia_202310.snappy.parquet
search/: search_index.json
src/: dashboard.py  extract.py  load.py  transform.py
src/analytic/: extract.py  load.py  pipeline_analytic.py  transform.py
src/dashboard/: dashboard.py  dashboard_utils.py
src/staging/: extract.py  main.py  pipeline_staging.py  transform.py
staging/: index.html
tests/: output_test.py  transform_test.py
