[tool.poetry]
name = "bigdataairlines"
version = "0.1.0"
description = "Projeto de estudos utilizando dados de aviação"
authors = ["Gabriel Carvalho Antunes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.1"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
