[tool.poetry]
name = "bigdataairlines"
version = "0.1.0"
description = "Projeto de estudos utilizando dados de aviação"
authors = ["Gabriel Carvalho Antunes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "^2.1.1"
unidecode = "^1.3.7"
pytest = "^7.4.2"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
setuptools = "^68.2.2"
aiohttp = "^3.8.6"
streamlit = "^1.27.2"
pip-audit = "^2.6.1"
mkdocs = "^1.5.3"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = """
isort .
blue .
"""
test = "pytest -v"
run = """
python main.py
"""
doc = "mkdocs serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

